# gaminect

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
app/: main.py
app/api/: router.py
app/api/api_v1/: router.py
app/api/api_v1/endpoints/: games.py  genres.py
app/api/endpoints/: health.py
app/core/: config.py  database.py  guid_type.py  routing.py
app/core/logging/: config.py  filter.py  formatter.py  types.py
app/models/: game.py  gaminect.py
app/schemas/: game.py  games.py  gaminect.py  health.py
app/services/: game.py  genre.py  health.py  main.py
tests/: rest-api.http
tests/services/: genre.py
